# modules_test_cmake

./: CMakeCache.txt  CMakeLists.txt  build.cmd  main  main.cpp  main.sln  makefile  module.mxx
.notes/: build.sh  wwid
modules/: m.cpp  n.cpp
